# sbc_codec_sys_rs

./: .gitignore  CMakeLists.txt  Cargo.toml  Readme.md  build.rs
bluez_sbc/: formats.h  sbc_primitives.c  sbc_primitives.h
src/: bindings.rs  config.h  lib.rs  params.rs  sbcdec.c  sbcenc.c  sbcinfo.c  wav_decode_encode.rs
src/test/: mod.rs  wav_decode_encode_tests.rs
